--- a/flanger.html
+++ b/flanger.html
@@ -14,7 +14,7 @@
         import {ParameterKnob} from "./modules/editors.js";
 
         const context = Policy.newAudioContext();
-        readAudio(context, "files/loops/hiphop-drum-loop-120bpm.ogg")
+        readAudio(context, "files/loops/neurofunk.ogg")
             .then(buffer => {
                 const source = context.createBufferSource();
                 source.buffer = buffer;
