--- a/biquad-filter.html
+++ b/biquad-filter.html
@@ -144,7 +144,7 @@
 
         const audio = new Audio();
         audio.setAttribute("crossorigin", "");
-        audio.src = "https://api.audiotool.com/track/jkpxib1d9dag/play.ogg";
+        audio.src = "files/track/geometric.ogg";
         Policy.playAudio(audio)
             .then(() => context.createMediaElementSource(audio)
                 .connect(filter)
